--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background: url("/static/timg.jpg") ;
+    background: url("/static/pic/timg.jpg") ;
     background-position: center 0; 
      background-repeat: no-repeat;  
      background-attachment: fixed; 
