--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 <link rel="icon" href="{{ url_for('static', filename='gundum.jepg') }}" type="image/x-icon">
 
 <!--<style type="text/css" href="static/style.css"></style>-->
-<link rel="stylesheet" href="static/style.css">
+<link rel="stylesheet" href="static/css/style.css">
 {% endblock %}
 
 {% block navbar %}
